# dashtoolsrecomendation

./: .gitignore  IMPLEMENTATION_NOTES.md  Makefile  README.md  app.py  pyproject.toml
.streamlit/: config.toml
src/dashtoolsrecomendation/: app.py  auth.py
src/dashtoolsrecomendation/assets/: colunas.py  style.css
src/dashtoolsrecomendation/components/: cards.py  create_filter.py  dashboard_charts.py  dashboard_filters.py  header.py
src/dashtoolsrecomendation/database/: database.py
src/dashtoolsrecomendation/pages/: add_tlm.py  config.py  dashboard.py  listas.py  load_data.py  teste.py
src/dashtoolsrecomendation/services/: dashboard_data.py  data_processing.py  get_config.py  get_data_ids.py  get_pq_normalizado.py  get_pq_normalizado2.py  normalization.py  renewal_analysis.py  write_xls.py
src/dashtoolsrecomendation/utils/: df_config.py  download_xlsx.py  formatters.py  handle_json.py  loaders.py
tests/: test_dashboard_data.py  test_data_processing.py  test_normalization.py  test_renewal_analysis.py  test_write_xls.py
