[project]
name = "dashtoolsrecomendation"
version = "0.1.0"
description = ""
authors = [
    {name = "edwdev-oficial",email = "edjdevel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "streamlit (>=1.59.2,<2.0.0)",
    "plotly (>=6.9.0,<7.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "dashtoolsrecomendation", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
